Bug 73891 - UI color panel does not show the actual color
Summary: UI color panel does not show the actual color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Tomofumi Yagi
URL:
Whiteboard: target:4.3.0 target:4.2.5 target:4.1.7
Keywords: regression
: 79496 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-21 18:28 UTC by Milos Sramek
Modified: 2014-06-18 13:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Blind fix for fdo#73891 (3.16 KB, patch)
2014-04-14 15:07 UTC, Tomofumi Yagi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Milos Sramek 2014-01-21 18:28:29 UTC
In LO40 and earlier, the Font Color, Background Color and Highlight Color panels (in all components) identified the actual color by a small frame. Although awkward, this feature helped if one wanted to apply the same color for a different object. Since the new color panel with more colors, introduced in LO41, there is no such functionality and there is now way how to find out, which color does an object have. Thus one cannot apply the same color to a different piece of text, object etc. I find this to be very annoying.

Moreover, functionality of these icons is different in different LO components.
If I set font color in Calc, the icon keeps the color even if I click on text with different color. This a good feature and can be used to recolor multiple pieces of text. In Writer or Impress, when clicking on text with different color, the actual color of the icon updates. So, when I want to use the same color for different pieces of text, I have to remember coordinates of the color in the panel.

I normally use in presentation just two colors - black and some highlight color. Even in this simple case the panel does not help me in setting the right color. What I (and maybe others too) would love to see, is a color panel, which shows a list of colors used in the document. This would remove all my problems with setting the color.

--
Milos
Comment 1 Dominique Boutry 2014-01-28 17:08:24 UTC
With LibO 4.2.0.3 on Win7:
- In Impress, when clicking on text with different color, the actual color of the icon updates
- In Calc, when clicking on text with different color, the actual color of the icon doesn't updates
- In Word, I got once a failure : when clicking on the icon (not in the drop-down panel), I manage to get the last colour used, not the one of the icon... but I didn'y reproduced...

What is OK however is the naming of 99 colors + Automatic, consistent between the color panel (99+1 colored squares) and the dropdown menus in property windows (100 named values). So you don't have to remember coordinates, just a name. Moreover, a name could be a good practice when designing docs and slideshows.
Comment 2 Milos Sramek 2014-01-28 18:30:21 UTC
Hi,
my primary problem is that the actual text color is not marked in the color panel. I normally do not remember color names (I can for a while, but not for months :)). There is currently no way to find out the color name. In LO40, the actual color was in the color panel highlighted by a double black frame. Since LO41 it is not.
Milos
Comment 3 pharmankur 2014-01-29 09:27:57 UTC
I agree with Milos.

I have the same problem. In such case I use format painter.

But it will be very nice to have selected colours getting identified & highlighted on color pallet.
Comment 4 sophie 2014-03-07 15:48:36 UTC
Agreed with Milos comments - set as new - Sophie
Comment 5 Owen Genat (retired) 2014-04-12 10:02:09 UTC
This issue does not affect v3.5.7.2 Build ID: 3215f89-f603614-ab984f2-7348103-1225a5b under Crunchbang 11 x86_64. Keyword "regression" added.
Comment 6 Tomofumi Yagi 2014-04-14 12:06:53 UTC
I think that the commit 35aa48d causes this regression.
http://cgit.freedesktop.org/libreoffice/core/commit/?id=35aa48d80b4b800d408d26bd72fbdfd711abbb6f
This commit removed some codes in svx/source/tbxctrls/tbcontrl.cxx.
Comment 7 Tomofumi Yagi 2014-04-14 15:07:01 UTC
Created attachment 97355 [details]
Blind fix for fdo#73891
Comment 8 Gerry 2014-04-21 06:23:54 UTC
I added bug 51584 to "see also". I think that that bug is related to this one.
Comment 9 Commit Notification 2014-04-25 13:56:19 UTC
Tomofumi Yagi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c31515d2e54a42ceac1b21409cb730cdbb825ed

fdo#73891 Fix "UI color panel does not show the actual color in Writer"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-04-25 14:01:01 UTC
Tomofumi Yagi committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf74704979090792bf083957619c8dd608e4f5c0&h=libreoffice-4-2

fdo#73891 Fix "UI color panel does not show the actual color in Writer"


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-04-25 14:05:37 UTC
Tomofumi Yagi committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb492e0bcf5c05d3ee5b95f4cc7e598845b26db2&h=libreoffice-4-1

fdo#73891 Fix "UI color panel does not show the actual color in Writer"


It will be available in LibreOffice 4.1.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Kohei Yoshida 2014-04-25 14:06:18 UTC
This is now fixed.  Thanks for the patch!
Comment 13 Maxim Monastirsky 2014-06-18 13:45:48 UTC
*** Bug 79496 has been marked as a duplicate of this bug. ***