fdo#73891 Fix "UI color panel does not show the actual color in Writer"

1.The Font/Background/Highlight Color panels identify the actual color
 by a small frame.
 (Regression from the commit 35aa48d80b4b800d408d26bd72fbdfd711abbb6f
  See also fdo#32376 - Set default color to the current one in toolbar
  popups)

2.Fix this in the Floating Font/Background/Highlight Color Toolbar,too.

Change-Id: I5c2db8ab8923ab146cbf921dcb90894765f8420c
Reviewed-on: https://gerrit.libreoffice.org/9103
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>
(cherry picked from commit 5c31515d2e54a42ceac1b21409cb730cdbb825ed)

Signed-off-by: Kohei Yoshida <kohei.yoshida@collabora.com>